fix: Correcting spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,3 +26,8 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed; /* Faz o gradiente seguir o scroll */
 }
+
+footer {
+  margin: 0; 
+  padding: 0;
+}
